# Project1_Texas

./: .gitignore  API_REFERENCE.md  Dockerfile.agent  Dockerfile.evaluator  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  start_agentbeats.sh  start_agentbeats_cloudflare.sh  start_agentbeats_with_ngrok.sh  start_green_agent.sh  start_leaderboard.sh
configs/: demo_hu_10hands.json  demo_hu_10hands.yaml  demo_hu_deepseek_vs_gpt5.yaml  demo_hu_tag_10hands.yaml  dev_6max.yaml  dev_hu.yaml  hu_kimi_vs_deepseek.yaml  sixmax_llm_showdown.yaml  ultra_fast_test.yaml  white_deepseek_vs_deepseek_1000hands_10seeds.yaml  white_deepseek_vs_deepseek_2000hands_5seeds.yaml  white_deepseek_vs_deepseek_600hands_3seeds.yaml  white_kimi_vs_kimi_1000hands_10seeds.yaml  white_nano_vs_nano_400hands_3seeds.yaml  white_vs_deepseek_1000hands.yaml  white_vs_deepseek_100hands.yaml  white_vs_deepseek_2000hands_20seeds.yaml  white_vs_gpt5_1000hands.yaml  white_vs_gpt5_100hands.yaml  white_vs_kimi_500hands.yaml  white_vs_white_2000hands_1seed.yaml
docs/: AGENTBEATS.md  AGENTBEATS_A2A.md  AGENTBEATS_DEPLOY.md  ARCHITECTURE.md  AgentBeats  Architecture  Development  使用指南.md
green_agent_benchmark/: __init__.py  baseline_registry.py  cards.py  cli.py  config_loader.py  engine.py  env_loader.py  logging_utils.py  metrics.py  runner.py  schemas.py
leaderboard/: README.md  auto_updater.py  index.html  launcher.py  leaderboard_generator.py  script.js  script_old.js  server.py  styles.css
scripts/: run_series.py
(+273 files in other folders)
